--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="pink">
-   <center><h1><b>WELCOME</b></h1></center>
+<body bgcolor="green">
+   <center><h1><b>WELCOME all aptech to all </b></h1></center>
 </body>
 </html>
